# SparkieTelegramBot

./: .breakpoints  LICENSE  README.md  create_bot.py  main.py  pyproject.toml  requirements.txt  user_settings.db  user_settings.db-journal
data_base/: get_sqlite.py  sqlite_db.py
handlers/: .client_eng.py.1610814450~  client_eng.py  client_ru.py  client_ukr.py
image_generation/: image_generation_eng.py
keyboards/: keyboards_eng.py  keyboards_ru.py  keyboards_ukr.py
payments/: payments_eng.py  payments_ru.py  payments_ukr.py
