[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
aiogram = "^2.24"
openai = "^0.26.1"
nltk = "^3.8.1"
transformers = "^4.26.0"
pycoingecko = "^3.1.0"
qrcode = "^7.4.2"
Pillow = "^9.4.0"
pycoin = "^0.92.20220529"
segno = "^1.5.2"
qrcodegen = "^1.8.0"
btcpay = "^1.0.3"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"